@@ -10,7 +10,7 @@ import com.sjm.test.yahdata.analy.helper.StreamTransformHelper;
 import com.sjm.test.yahdata.analy.module.wavepoint.bean.WavePoint;
 import com.sjm.test.yahdata.analy.ta.KHelper;
 
-public class UpBreakTriangleWavePattern extends BaseWavePattern {
+public class UpBreakTriangleWavePattern extends BaseTriangleWavePattern {
 
 	@Override
 	public Set<String> find(List<StockBean> stockList, List<WavePoint> sortedTopList, List<WavePoint> sortedBotList) {
@@ -25,66 +25,96 @@ public class UpBreakTriangleWavePattern extends BaseWavePattern {
 		if(sortedTopList.size()<3 ||sortedBotList.size()<3)
 			return msg;
 		
-		StockBean last = stockList.get(stockList.size()-1);
-		
-		WavePoint topLast1 = sortedTopList.get(sortedTopList.size()-1);
+		StockBean last1 = stockList.getLast();
+		StockBean last2 = stockList.get(stockList.size()-2);
+
+		WavePoint topLast1 = sortedTopList.getLast();
 		WavePoint topLast2 = sortedTopList.get(sortedTopList.size()-2);
 		WavePoint topLast3 = sortedTopList.get(sortedTopList.size()-3);
-		
-		WavePoint botLast1 = sortedBotList.get(sortedBotList.size()-1);
+
+		WavePoint botLast1 = sortedBotList.getLast();
 		WavePoint botLast2 = sortedBotList.get(sortedBotList.size()-2);
 		WavePoint botLast3 = sortedBotList.get(sortedBotList.size()-3);
-
-		
-		boolean ispass1 = false;
-		boolean ispass2 = false;
-		if(topLast3.getStockBean().getH()>=topLast2.getStockBean().getH() && topLast2.getStockBean().getH()>=topLast1.getStockBean().getH()) {
-			ispass1 = true;
-		}
-		
-//		if(topLast3.getStockBean().getBodyTop()>=topLast2.getStockBean().getBodyTop() && topLast2.getStockBean().getBodyTop()>=topLast1.getStockBean().getBodyTop()) {
+//
+//
+//		boolean ispass1 = false;
+//		boolean ispass2 = false;
+//		boolean ispass3 = false;
+//		if(topLast3.getStockBean().getH()>topLast2.getStockBean().getH()
+//				&& topLast2.getStockBean().getH()>topLast1.getStockBean().getH()) {
 //			ispass1 = true;
 //		}
-		List<StockBean>  topToEndList = StreamTransformHelper.subListWithEndElement(stockList, topLast1.getDate(), last.getTxnDate());;
-		List<StockBean>  targetStockList1 = topToEndList.subList(1, topToEndList.size());
-		StockBean relativeHighSk = StreamTransformHelper.findMaxHighStock(targetStockList1);
-		if(relativeHighSk.getH() > topLast1.getH()){
-			ispass1 = false;
-		}
-
-		if(botLast3.getStockBean().getL()<=botLast2.getStockBean().getL() && botLast2.getStockBean().getL()<=botLast1.getStockBean().getL()) {
-			ispass2 = true;
-		}
-		
-//		if(botLast3.getStockBean().getBodyBottom()<=botLast2.getStockBean().getBodyBottom() && botLast2.getStockBean().getBodyBottom()<=botLast1.getStockBean().getBodyBottom()) {
+//
+////		if(topLast3.getStockBean().getBodyTop()>=topLast2.getStockBean().getBodyTop() && topLast2.getStockBean().getBodyTop()>=topLast1.getStockBean().getBodyTop()) {
+////			ispass1 = true;
+////		}
+//		List<StockBean>  topToEndList = StreamTransformHelper.subListWithEndElement(stockList, topLast1.getDate(), last1.getTxnDate());;
+//		List<StockBean>  targetStockList1 = topToEndList.subList(1, topToEndList.size());
+//		StockBean relativeHighSk = StreamTransformHelper.findMaxHighStock(targetStockList1);
+//		if(relativeHighSk.getH() > topLast1.getH()){
+//			ispass1 = false;
+//		}
+//
+//		if(botLast3.getStockBean().getL()<botLast2.getStockBean().getL()
+//				&& botLast2.getStockBean().getL()<botLast1.getStockBean().getL()) {
 //			ispass2 = true;
 //		}
+//
+////		if(botLast3.getStockBean().getBodyBottom()<=botLast2.getStockBean().getBodyBottom() && botLast2.getStockBean().getBodyBottom()<=botLast1.getStockBean().getBodyBottom()) {
+////			ispass2 = true;
+////		}
+//
+//		List<StockBean>  botToEndList = StreamTransformHelper.subListWithEndElement(stockList, botLast1.getDate(), last1.getTxnDate());;
+//		List<StockBean>  targetStockList2 = botToEndList.subList(1, botToEndList.size());
+//		StockBean relativeLowSk = StreamTransformHelper.findMinLowStock(targetStockList2);
+//		if(relativeLowSk.getL()< botLast1.getL()){
+//			ispass2 = false;
+//		}
+//
+//		if( topLast1.getL() > botLast3.getL()){
+//			ispass3 = true;
+//		}
+//
+//		if(!(ispass1 && ispass2 && ispass3))
+//			return msg;
 
-		List<StockBean>  botToEndList = StreamTransformHelper.subListWithEndElement(stockList, botLast1.getDate(), last.getTxnDate());;
-		List<StockBean>  targetStockList2 = botToEndList.subList(1, botToEndList.size());
-		StockBean relativeLowSk = StreamTransformHelper.findMinLowStock(targetStockList2);
-		if(relativeLowSk.getL()< botLast1.getL()){
-			ispass2 = false;
-		}
+		boolean isTrangleWave = this.isTrangleWave(stockList, sortedTopList, sortedBotList);
+		if(!isTrangleWave)
+			return msg;
+//		double thresholdMinRequired = topLast1.getStockBean().getH() * 0.95;
+//		double thresholdMaxRequired = topLast1.getStockBean().getH() * 1.01;
 
+		if(last1.getC() >= topLast1.getStockBean().getBodyTop()
+				&& last1.getH() > topLast1.getH()
+				&& KHelper.isBullishCandle(last1)
+				&& last2.getBodyTop() < topLast1.getH()
 
-
-		
-		
-		double thresholdMinRequired = topLast1.getStockBean().getH() * 0.95;
-		double thresholdMaxRequired = topLast1.getStockBean().getH() * 1.01;
-		
-		if(ispass1 && ispass2 && last.getC()>=thresholdMinRequired 
-				&& last.getC()<=thresholdMaxRequired
-				&& topLast1.getL() > botLast3.getL()
-				&& KHelper.isBullishCandle(last)
-			) 
+		){
+			String txt = Const.UP+Const.D0+"破小三角";
+			if(last1.getDayVolumeChgPct()>2.0 || (Const.IS_INTRADAY && last1.getDayVolumeChgPct() > Const.INTRADAY_BIG_VOL)) {
+				txt += Const.BIG_VOL;
+			}
+			msg.add(txt);
+		}else if(last1.getC() <= topLast1.getStockBean().getBodyTop()
+				&& last1.getC() >= topLast1.getStockBean().getBodyBottom()
+				&& last1.getH() < topLast1.getH()
+				&& KHelper.isBullishCandle(last1)
+				&& last2.getH() < topLast1.getH()
+			)
 		{
 			msg.add(Const.WAIT+Const.UP+"破小三角");
 			
 			boolean isAnotherTriangleShape = this.isUpTrendTriangle( sortedTopList, sortedBotList);
 			if(isAnotherTriangleShape)
 				msg.add(Const.WAIT+Const.UP+"破向上三角");
+		}else if(last1.getC() >= topLast1.getStockBean().getBodyTop()
+				&& last2.getBodyTop() > topLast1.getH()
+				&& last1.getC()<topLast3.getH()
+				&& last1.getH()<topLast3.getH()
+		){
+			msg.add(Const.UP+"破小三角");
+		}else{
+			msg.add("小三角");
 		}
 		
 		return msg;
